Update deportista por id
